--- a/JDict.Tests/packages.config
+++ b/JDict.Tests/packages.config
@@ -7,6 +7,7 @@
   <package id="NMeCab" version="0.06.4" targetFramework="net461" />
   <package id="NUnit" version="3.10.1" targetFramework="net461" />
   <package id="NUnitLite" version="3.10.1" targetFramework="net461" />
+  <package id="Optional" version="4.0.0" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
