--- a/JDict/JDict.csproj
+++ b/JDict/JDict.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Optional" Version="4.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Utils\" />
+  </ItemGroup>
+
 </Project>
