--- a/DidacticalEnigma/packages.config
+++ b/DidacticalEnigma/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AsyncEnumerator" version="2.2.1" targetFramework="net461" />
+  <package id="Gu.Analyzers" version="1.2.18.1-dev" targetFramework="net461" developmentDependency="true" />
   <package id="Gu.Inject" version="0.1.0-dev" targetFramework="net461" />
   <package id="LibJpConjSharp" version="0.5.7" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="2.1.1" targetFramework="net461" />
