--- a/DidacticalEnigma/packages.config
+++ b/DidacticalEnigma/packages.config
@@ -3,7 +3,8 @@
   <package id="AsyncEnumerator" version="2.2.1" targetFramework="net461" />
   <package id="Gu.Analyzers" version="1.2.18.1-dev" targetFramework="net461" developmentDependency="true" />
   <package id="Gu.Inject" version="0.1.0-dev" targetFramework="net461" />
-  <package id="LibJpConjSharp" version="0.5.7" targetFramework="net461" />
+  <package id="LibJpConjSharp" version="0.5.8" targetFramework="net461" />
+  <package id="LiteDB" version="4.1.4" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="2.1.1" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
@@ -17,7 +18,7 @@
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net461" />
   <package id="System.Console" version="4.3.1" targetFramework="net461" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net461" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net461" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
@@ -40,7 +41,7 @@
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
