--- a/JDict.Tests/packages.config
+++ b/JDict.Tests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Gu.Analyzers" version="1.2.18.1-dev" targetFramework="net461" developmentDependency="true" />
   <package id="Gu.Inject" version="0.1.0-dev" targetFramework="net461" />
+  <package id="LiteDB" version="4.1.4" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="2.1.1" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
