--- a/JDict.Tests/JDict.Tests.csproj
+++ b/JDict.Tests/JDict.Tests.csproj
@@ -163,6 +163,7 @@
     <Compile Include="AutoGlosserTests.cs" />
     <Compile Include="EnumerableExt.cs" />
     <Compile Include="Index.cs" />
+    <Compile Include="JnedictTests.cs" />
     <Compile Include="Kradfile.cs" />
     <Compile Include="MeCab.cs" />
     <Compile Include="Program.cs" />
