--- a/DidacticalEnigma/packages.config
+++ b/DidacticalEnigma/packages.config
@@ -9,7 +9,7 @@
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
-  <package id="NMeCab" version="0.06.4" targetFramework="net461" />
+  <package id="NMeCabNetStandard" version="0.7.0" targetFramework="net461" />
   <package id="Optional" version="4.0.0" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
