Remove duplication across projects

--- a/DidacticalEnigma.Core/DidacticalEnigma.Core.csproj
+++ b/DidacticalEnigma.Core/DidacticalEnigma.Core.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="LibJpConjSharp" Version="0.5.8" />
     <PackageReference Include="LiteDB" Version="4.1.4" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="NMeCabNetStandard" Version="0.7.0" />
     <PackageReference Include="Optional" Version="4.0.0" />
     <PackageReference Include="UnicodeInformation" Version="2.2.1" />
   </ItemGroup>
