Add PropertyChangedAnalyzers to the project

--- a/DidacticalEnigma/packages.config
+++ b/DidacticalEnigma/packages.config
@@ -11,6 +11,7 @@
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="NMeCabNetStandard" version="0.7.0" targetFramework="net461" />
   <package id="Optional" version="4.0.0" targetFramework="net461" />
+  <package id="PropertyChangedAnalyzers" version="2.6.0.1" targetFramework="net461" developmentDependency="true" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
