--- a/DidacticalEnigma/DidacticalEnigma.csproj
+++ b/DidacticalEnigma/DidacticalEnigma.csproj
@@ -311,6 +311,8 @@
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\packages\Gu.Analyzers.1.2.18.1-dev\analyzers\dotnet\cs\Gu.Analyzers.dll" />
+    <Analyzer Include="..\packages\PropertyChangedAnalyzers.2.6.0.1\analyzers\dotnet\cs\Gu.Roslyn.Extensions.dll" />
+    <Analyzer Include="..\packages\PropertyChangedAnalyzers.2.6.0.1\analyzers\dotnet\cs\PropertyChangedAnalyzers.dll" />
     <Analyzer Include="..\packages\WpfAnalyzers.2.1.7.1\analyzers\dotnet\cs\Gu.Roslyn.AnalyzerExtensions.dll" />
     <Analyzer Include="..\packages\WpfAnalyzers.2.1.7.1\analyzers\dotnet\cs\Gu.Roslyn.CodeFixExtensions.dll" />
     <Analyzer Include="..\packages\WpfAnalyzers.2.1.7.1\analyzers\dotnet\cs\WpfAnalyzers.dll" />
