--- a/DidacticalEnigma.Avalonia/DidacticalEnigma.Avalonia.csproj
+++ b/DidacticalEnigma.Avalonia/DidacticalEnigma.Avalonia.csproj
@@ -16,5 +16,6 @@
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="0.6.1" />
     <PackageReference Include="Avalonia.Desktop" Version="0.6.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 </Project>
