--- a/JDict.Tests/JDict.Tests.csproj
+++ b/JDict.Tests/JDict.Tests.csproj
@@ -54,6 +54,9 @@
       <Private>True</Private>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=3.11.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.11.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
@@ -162,6 +165,7 @@
   <ItemGroup>
     <Compile Include="AutoGlosserTests.cs" />
     <Compile Include="EnumerableExt.cs" />
+    <Compile Include="EpWingTests.cs" />
     <Compile Include="Index.cs" />
     <Compile Include="JnedictTests.cs" />
     <Compile Include="Kradfile.cs" />
