--- a/JDict.Tests/packages.config
+++ b/JDict.Tests/packages.config
@@ -6,6 +6,7 @@
   <package id="Microsoft.NETCore.Platforms" version="2.1.1" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="NMeCabNetStandard" version="0.7.0" targetFramework="net461" />
   <package id="NUnit" version="3.11.0" targetFramework="net461" />
   <package id="NUnitLite" version="3.11.0" targetFramework="net461" />
