--- a/EpwingRemapper.ConsoleFx/packages.config
+++ b/EpwingRemapper.ConsoleFx/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Gu.Analyzers" version="1.3.0.0-dev" targetFramework="net461" developmentDependency="true" />
   <package id="LiteDB" version="4.1.4" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
 </packages>
