--- a/JDict.Tests/JDict.Tests.csproj
+++ b/JDict.Tests/JDict.Tests.csproj
@@ -189,12 +189,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Analyzer Include="..\packages\Gu.Analyzers.1.2.18.1-dev\analyzers\dotnet\cs\Gu.Analyzers.dll" />
-    <Analyzer Include="..\packages\Gu.Analyzers.1.2.18.1-dev\analyzers\dotnet\cs\Gu.Roslyn.AnalyzerExtensions.dll" />
-    <Analyzer Include="..\packages\Gu.Analyzers.1.2.18.1-dev\analyzers\dotnet\cs\Gu.Roslyn.CodeFixExtensions.dll" />
+    <Content Include="Program.vb" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Program.vb" />
+    <Analyzer Include="..\packages\Gu.Analyzers.1.3.0.0-dev\analyzers\dotnet\cs\Gu.Analyzers.dll" />
+    <Analyzer Include="..\packages\Gu.Analyzers.1.3.0.0-dev\analyzers\dotnet\cs\Gu.Roslyn.Extensions.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
