Helper application to export Zero-Epwing's JSON bitmap font dumps as png

--- a/EpwingRemapper.Core/EpwingRemapper.Core.csproj
+++ b/EpwingRemapper.Core/EpwingRemapper.Core.csproj
@@ -4,4 +4,18 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Gu.Analyzers" Version="1.3.0-dev">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="LiteDB" Version="4.1.4" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-beta0005" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\JDict\JDict.csproj" />
+  </ItemGroup>
+
 </Project>
