--- a/DidacticalEnigma.Avalonia/DidacticalEnigma.Avalonia.csproj
+++ b/DidacticalEnigma.Avalonia/DidacticalEnigma.Avalonia.csproj
@@ -16,6 +16,11 @@
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="0.6.1" />
     <PackageReference Include="Avalonia.Desktop" Version="0.6.1" />
+    <PackageReference Include="Gu.Analyzers" Version="1.3.0-dev">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="LiteDB" Version="4.1.4" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 </Project>
