--- a/JDict.Tests/JDict.Tests.csproj
+++ b/JDict.Tests/JDict.Tests.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringExtTests.cs" />
     <Compile Include="Tagger.cs" />
+    <Compile Include="Yomichan.cs" />
     <Compile Include="ZipTests.cs" />
   </ItemGroup>
   <ItemGroup>
