--- a/JDict.Tests/JDict.Tests.csproj
+++ b/JDict.Tests/JDict.Tests.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Kradfile.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Romaji.cs" />
     <Compile Include="StringExtTests.cs" />
     <Compile Include="Tagger.cs" />
     <Compile Include="Yomichan.cs" />
