--- a/JDict.Tests/JDict.Tests.csproj
+++ b/JDict.Tests/JDict.Tests.csproj
@@ -170,6 +170,7 @@
     <Compile Include="Index.cs" />
     <Compile Include="JnedictTests.cs" />
     <Compile Include="Kradfile.cs" />
+    <Compile Include="MeCab.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Romaji.cs" />
