Added script to copy data folder inside build folder

--- a/DidacticalEnigma/DidacticalEnigma.csproj
+++ b/DidacticalEnigma/DidacticalEnigma.csproj
@@ -325,4 +325,11 @@
     <Error Condition="!Exists('..\packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets'))" />
   </Target>
   <Import Project="..\packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets" Condition="Exists('..\packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets')" />
+  <PropertyGroup>
+    <PreBuildEvent>
+    </PreBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PostBuildEvent>call "$(SolutionDir)Scripts\postBuild.bat" "$(ProjectDir)$(OutDir)Data\" "$(SolutionDir)Data"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
