Refactor utilities into a separate project

--- a/DidacticalEnigma.Core/DidacticalEnigma.Core.csproj
+++ b/DidacticalEnigma.Core/DidacticalEnigma.Core.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\JDict\JDict.csproj" />
+    <ProjectReference Include="..\Utility\Utility.csproj" />
   </ItemGroup>
 
   <ItemGroup>
