Introduce Sentry bug reporting

--- a/DidacticalEnigma/App.config
+++ b/DidacticalEnigma/App.config
@@ -3,6 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <appSettings>
+    <add key="SentryDsn" value="https://2a2ec5ffdaca45f79428cb5addd7ea38@sentry.io/1406473"/>
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
