--- a/DidacticalEnigma/packages.config
+++ b/DidacticalEnigma/packages.config
@@ -12,10 +12,14 @@
   <package id="NMeCabNetStandard" version="0.7.0" targetFramework="net461" />
   <package id="Optional" version="4.0.0" targetFramework="net461" />
   <package id="PropertyChangedAnalyzers" version="2.6.0.1" targetFramework="net461" developmentDependency="true" />
+  <package id="Sentry" version="1.1.2" targetFramework="net461" />
+  <package id="Sentry.PlatformAbstractions" version="1.0.0" targetFramework="net461" />
+  <package id="Sentry.Protocol" version="1.0.3" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
+  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net461" />
   <package id="System.Console" version="4.3.1" targetFramework="net461" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
