--- a/JDict/JDict.csproj
+++ b/JDict/JDict.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TinyIndex\TinyIndex\TinyIndex.csproj" />
     <ProjectReference Include="..\Utility\Utility.csproj" />
   </ItemGroup>
 
