--- a/JDict.Tests/JDict.Tests.csproj
+++ b/JDict.Tests/JDict.Tests.csproj
@@ -173,6 +173,7 @@
   <ItemGroup>
     <Compile Include="AutoGlosserTests.cs" />
     <Compile Include="EnumerableExt.cs" />
+    <Compile Include="IdiomDetectorTests.cs" />
     <Compile Include="Index.cs" />
     <Compile Include="JMDictTests.cs" />
     <Compile Include="JnedictTests.cs" />
