--- a/DidacticalEnigma.Core/DidacticalEnigma.Core.csproj
+++ b/DidacticalEnigma.Core/DidacticalEnigma.Core.csproj
@@ -11,6 +11,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="JetBrains.Annotations" Version="10.2.1" />
     <PackageReference Include="LibJpConjSharp" Version="0.5.8" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="NMeCabNetStandard" Version="0.7.0" />
