Improve partial word search

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "TinyIndex"]
 	path = TinyIndex
 	url = https://github.com/milleniumbug/TinyIndex
+[submodule "FuzzySharp"]
+	path = FuzzySharp
+	url = https://github.com/milleniumbug/FuzzySharp
