--- a/JDict.Tests/JDict.Tests.csproj
+++ b/JDict.Tests/JDict.Tests.csproj
@@ -204,6 +204,7 @@
     <Compile Include="PerformanceTests.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RadicalSearcherTests.cs" />
     <Compile Include="Romaji.cs" />
     <Compile Include="SerializerExtTests.cs" />
     <Compile Include="StringExtTests.cs" />
