--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,7 @@ image: Visual Studio 2017
 configuration: Release
 build:
   project: DidacticalEnigma.sln
+  verbosity: minimal
 install:
   - cd %APPVEYOR_BUILD_FOLDER%
   - git submodule update --init --recursive
