Two project for testing under .NET Core and .NET Framework

--- a/DidacticalEnigma.CLI.NetCore/DidacticalEnigma.CLI.NetCore.csproj
+++ b/DidacticalEnigma.CLI.NetCore/DidacticalEnigma.CLI.NetCore.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NMeCabNetStandard" Version="0.7.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DidacticalEnigma.CLI.Common\DidacticalEnigma.CLI.Common.csproj" />
   </ItemGroup>
 
