Add Ubuntu builds to Appveyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,17 +1,19 @@
-image: Visual Studio 2017
+image:
+  - Visual Studio 2017
+  - Ubuntu
 configuration: Release
 build:
   project: DidacticalEnigma.sln
   verbosity: minimal
 install:
-  - cd %APPVEYOR_BUILD_FOLDER%
-  - git submodule update --init --recursive
-  - nuget restore
-  - dotnet publish MagicTranslatorGlosser/MagicTranslatorGlosser.csproj -c Release -r linux-x64 --self-contained false -o %APPVEYOR_BUILD_FOLDER%\DidacticalEnigma\bin\Release\MagicTranslatorGlosser
-  - dotnet publish MagicTranslatorGlosser/MagicTranslatorGlosser.csproj -c Release -r win-x64 --self-contained false -o %APPVEYOR_BUILD_FOLDER%\DidacticalEnigma\bin\Release\MagicTranslatorGlosser
+  - ps: cd $APPVEYOR_BUILD_FOLDER
+  - ps: git submodule update --init --recursive
+  - ps: nuget restore
+  - ps: dotnet publish MagicTranslatorGlosser/MagicTranslatorGlosser.csproj -c Release -r linux-x64 --self-contained false -o $APPVEYOR_BUILD_FOLDER/DidacticalEnigma/bin/Release/MagicTranslatorGlosser
+  - ps: dotnet publish MagicTranslatorGlosser/MagicTranslatorGlosser.csproj -c Release -r win-x64 --self-contained false -o $APPVEYOR_BUILD_FOLDER/DidacticalEnigma/bin/Release/MagicTranslatorGlosser
 after_build:
-  - ren %APPVEYOR_BUILD_FOLDER%\DidacticalEnigma\bin\Release DidacticalEnigma
-  - 7z a -r DidacticalEnigma.zip %APPVEYOR_BUILD_FOLDER%\DidacticalEnigma\bin\DidacticalEnigma
+  - ps: mv $APPVEYOR_BUILD_FOLDER/DidacticalEnigma/bin/Release $APPVEYOR_BUILD_FOLDER/DidacticalEnigma/bin/DidacticalEnigma
+  - ps: 7z a -r DidacticalEnigma.zip $APPVEYOR_BUILD_FOLDER/DidacticalEnigma/bin/DidacticalEnigma
 artifacts:
   - path: DidacticalEnigma.zip
     name: Full program
