Fix NRE caused by assuming that MeCab always provides a reading

--- a/AutomatedTests.NetFramework/AutomatedTests.NetFramework.csproj
+++ b/AutomatedTests.NetFramework/AutomatedTests.NetFramework.csproj
@@ -195,6 +195,9 @@
     <Compile Include="..\AutomatedTests.Common\Sandbox.cs">
       <Link>Sandbox.cs</Link>
     </Compile>
+    <Compile Include="..\AutomatedTests.Common\SentenceParserTests.cs">
+      <Link>SentenceParserTests.cs</Link>
+    </Compile>
     <Compile Include="..\AutomatedTests.Common\SerializerExtTests.cs">
       <Link>SerializerExtTests.cs</Link>
     </Compile>
