--- a/DidacticalEnigma.CLI.NetCore/Properties/launchSettings.json
+++ b/DidacticalEnigma.CLI.NetCore/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "DidacticalEnigma.CLI.NetCore": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "D:\\DidacticalEnigma-Data autoglosser \"試着は できるのか?\""
     }
   }
 }
