--- a/MagicTranslatorGlosser/Properties/launchSettings.json
+++ b/MagicTranslatorGlosser/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "MagicTranslatorGlosser": {
       "commandName": "Project",
-      "commandLineArgs": "セーラー服"
+      "commandLineArgs": "試着は できるのか?"
     }
   }
 }
