--- a/AutomatedTests.NetCore/AutomatedTests.NetCore.csproj
+++ b/AutomatedTests.NetCore/AutomatedTests.NetCore.csproj
@@ -34,6 +34,7 @@
     <Compile Include="..\AutomatedTests.Common\RadicalSearcherTests.cs" Link="RadicalSearcherTests.cs" />
     <Compile Include="..\AutomatedTests.Common\Romaji.cs" Link="Romaji.cs" />
     <Compile Include="..\AutomatedTests.Common\Sandbox.cs" Link="Sandbox.cs" />
+    <Compile Include="..\AutomatedTests.Common\SentenceParserTests.cs" Link="SentenceParserTests.cs" />
     <Compile Include="..\AutomatedTests.Common\SerializerExtTests.cs" Link="SerializerExtTests.cs" />
     <Compile Include="..\AutomatedTests.Common\SimpleProjectTests.cs" Link="SimpleProjectTests.cs" />
     <Compile Include="..\AutomatedTests.Common\StringExtTests.cs" Link="StringExtTests.cs" />
