--- a/DidacticalEnigma.Xam.Android/DidacticalEnigma.Xam.Android.csproj
+++ b/DidacticalEnigma.Xam.Android/DidacticalEnigma.Xam.Android.csproj
@@ -73,6 +73,9 @@
     <PackageReference Include="System.Memory">
       <Version>4.5.3</Version>
     </PackageReference>
+    <PackageReference Include="System.Numerics.Vectors">
+      <Version>4.5.0</Version>
+    </PackageReference>
     <PackageReference Include="UnicodeInformation">
       <Version>2.3.0.26</Version>
     </PackageReference>
@@ -122,9 +125,25 @@
     <Folder Include="Resources\drawable-xxxhdpi\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DidacticalEnigma.Core\DidacticalEnigma.Core.csproj">
+      <Project>{72613547-03d0-4cde-ae3e-946451e99726}</Project>
+      <Name>DidacticalEnigma.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DidacticalEnigma.Xam\DidacticalEnigma.Xam.csproj">
       <Project>{E9375E90-862E-4B79-A268-C5CE4B40BE4A}</Project>
       <Name>DidacticalEnigma.Xam</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\JDict\JDict.csproj">
+      <Project>{82e18376-40e8-4f9d-bc46-e166354bccb3}</Project>
+      <Name>JDict</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TinyIndex\TinyIndex\TinyIndex.csproj">
+      <Project>{41b81c6b-c466-4c3f-8460-3ef2288a33d8}</Project>
+      <Name>TinyIndex</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Utility\Utility.csproj">
+      <Project>{6014edb7-3375-4d85-90a5-4db7638d7b39}</Project>
+      <Name>Utility</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
