--- a/DidacticalEnigma.Xam.WPF/packages.config
+++ b/DidacticalEnigma.Xam.WPF/packages.config
@@ -8,12 +8,13 @@
   <package id="OpenTK" version="2.0.0" targetFramework="net472" />
   <package id="OpenTK.GLControl" version="1.1.2349.61993" targetFramework="net472" />
   <package id="Optional" version="4.0.0" targetFramework="net472" />
-  <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
-  <package id="System.ComponentModel.Annotations" version="4.3.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.3" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
   <package id="UnicodeInformation" version="2.3.0.26" targetFramework="net472" />
+  <package id="Xamarin.Essentials" version="1.1.0" targetFramework="net472" />
   <package id="Xamarin.Forms" version="3.6.0.344457" targetFramework="net472" />
   <package id="Xamarin.Forms.Platform.WPF" version="3.6.0.344457" targetFramework="net472" />
 </packages>
