--- a/DidacticalEnigma.Xam.iOS/DidacticalEnigma.Xam.iOS.csproj
+++ b/DidacticalEnigma.Xam.iOS/DidacticalEnigma.Xam.iOS.csproj
@@ -154,6 +154,9 @@
     <PackageReference Include="System.Memory">
       <Version>4.5.3</Version>
     </PackageReference>
+    <PackageReference Include="System.Numerics.Vectors">
+      <Version>4.5.0</Version>
+    </PackageReference>
     <PackageReference Include="UnicodeInformation">
       <Version>2.3.0.26</Version>
     </PackageReference>
