--- a/DidacticalEnigma.Xam/DidacticalEnigma.Xam.csproj
+++ b/DidacticalEnigma.Xam/DidacticalEnigma.Xam.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -18,6 +18,7 @@
     <PackageReference Include="NMeCabNetStandard" Version="0.7.2" />
     <PackageReference Include="Optional" Version="4.0.0" />
     <PackageReference Include="System.Memory" Version="4.5.3" />
+    <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
     <PackageReference Include="UnicodeInformation" Version="2.3.0.26" />
     <PackageReference Include="Xamarin.Forms" Version="3.6.0.344457" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
